# docu-buddy

./: README.md  railway.toml
ai/: pyproject.toml
ai/src/ai/: crew.py
backend/: complexity_analyzer.py  llm_complexity_analyzer.py  llm_prompt.py  main.py  requirements.txt  supabase_access.py
backend/analysis/: complexity_analyzer.py  download_github_repo.py
docubuddy_ai/: README.md  pyproject.toml
docubuddy_ai/src/docubuddy_ai/: crew.py  main.py
docubuddy_ai/src/docubuddy_ai/config/: agents.yaml  tasks.yaml
