[project]
name = "docubuddy_ai"
version = "0.1.0"
description = "docubuddy_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.121.1,<1.0.0"
]

[project.scripts]
docubuddy_ai = "docubuddy_ai.main:run"
run_crew = "docubuddy_ai.main:run"
train = "docubuddy_ai.main:train"
replay = "docubuddy_ai.main:replay"
test = "docubuddy_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
